@@ -42,7 +42,7 @@ Credits
 =======
 
 Cantata contains code from;
-    Amarok      - amarok.kde.org
-    Clementine  - www.clementine-player.org
-    libmaia     - https://github.com/wiedi/libmaia
-    libebur128  = https://github.com/jiixyj/libebur12
+    Amarok     - amarok.kde.org
+    Clementine - www.clementine-player.org
+    libmaia    - https://github.com/wiedi/libmaia
+    libebur128 - https://github.com/jiixyj/libebur12
