@@ -225,6 +225,9 @@ void DevicesPage::itemDoubleClicked(const QModelIndex &)
 void DevicesPage::searchItems()
 {
     proxy.update(view->searchText().trimmed(), genreCombo->currentIndex()<=0 ? QString() : genreCombo->currentText());
+    if (proxy.enabled()) {
+        view->expandAll();
+    }
 }
 
 void DevicesPage::controlActions()
