@@ -199,6 +199,9 @@ void AlbumsPage::itemActivated(const QModelIndex &)
 void AlbumsPage::searchItems()
 {
     proxy.update(view->searchText().trimmed(), genreCombo->currentIndex()<=0 ? QString() : genreCombo->currentText());
+    if (proxy.enabled()) {
+        view->expandAll();
+    }
 }
 
 void AlbumsPage::controlActions()
