@@ -242,6 +242,9 @@ void LibraryPage::itemDoubleClicked(const QModelIndex &)
 void LibraryPage::searchItems()
 {
     proxy.update(view->searchText().trimmed(), genreCombo->currentIndex()<=0 ? QString() : genreCombo->currentText());
+    if (proxy.enabled()) {
+        view->expandAll();
+    }
 }
 
 void LibraryPage::controlActions()
