@@ -667,3 +667,31 @@ void GroupedView::itemClicked(const QModelIndex &idx)
         }
     }
 }
+
+void GroupedView::expandAll()
+{
+    quint32 count=model()->rowCount();
+    for (quint32 i=0; i<count; ++i) {
+        expand(model()->index(i, 0));
+    }
+}
+
+void GroupedView::expand(const QModelIndex &idx)
+{
+    if (idx.isValid()) {
+        if (idx.data(GroupedView::Role_IsCollection).toBool()) {
+            setExpanded(idx, true);
+            quint32 count=model()->rowCount(idx);
+            for (quint32 i=0; i<count; ++i) {
+                expand(idx.child(i, 0));
+            }
+        }
+        else if (AlbumHeader==getType(idx)) {
+            quint16 indexKey=idx.data(GroupedView::Role_Key).toUInt();
+            quint32 collection=idx.data(GroupedView::Role_CollectionId).toUInt();
+            if (!isExpanded(indexKey, collection)) {
+                toggle(idx);
+            }
+        }
+    }
+}
