@@ -31,7 +31,8 @@
 19. Fix logic of replacing play queue - the clear message is sent in the MPD
     thread just before the add message.
 20. Improve albums page responsiveness when loading covers.
-21. Better filtering.
+21. Better searching - search on all strings, in any order.
+22. Automatically expand treeview items when searching.
 
 0.5.1
 -----
